<resources>
    <string name="app_name">Login page</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="already_member">Already a Member??</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Create New Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_contact">Enter Contact No.</string>
    <string name="navigate_but">Forgot Password?</string>
    <string name="back_button_description">OK</string>
    <string name="recycle">Recycle</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="enter_text">Enter text</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="which_month_do_you_want_to_view">Which month do you want to view?</string>
    <string name="user_name">Enter User Name</string>
    <string name="password_new">Password</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="pin_code">Pin Code</string>
    <string name="address">Address</string>
    <string name="state_selection_description">Select your state from the dropdown list</string>
    <string name="district_selection_description">Select your district from the dropdown list</string>
    <string name="frameworks">frameworks</string>
    <string name="icons_hulalala">icons</string>
    <string name="amnex">AMNEX</string>
    <string name="BuildingFuture">Intelligence in Innovation</string>
    <string name="amnex_company_logo">Amnex company logo</string>
    <string name="continue_with_google">With Google</string>
    <string name="click_here_to_learn_more">Want to become a Member?</string>
    <string name="terms_broooooooooooo">By signing up, you confirm you have read the agreed to AMNEX\'s <u>Privacy Policy</u>, <u>Cookies</u> and <u>Terms</u>.</string>
    <string name="amnex_logo">amnex logo</string>
    <string name="continue_with_phone">With Phone</string>
    <string name="register_butt">Register</string>
    <string name="settings">Settings</string>
    <string name="add_a_profile_picture">Add a profile picture?</string>
</resources>