<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignMargins"
    android:columnCount="3"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_marginBottom="8dp"
        android:text="@string/which_month_do_you_want_to_view"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/monthRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/januaryRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/january" />

        <RadioButton
            android:id="@+id/februaryRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/february" />

        <RadioButton
            android:id="@+id/marchRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march" />

        <RadioButton
            android:id="@+id/aprilRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/april" />

        <RadioButton
            android:id="@+id/MayRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/may" />

        <RadioButton
            android:id="@+id/JuneRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/june" />

        <RadioButton
            android:id="@+id/JulyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/july" />

        <RadioButton
            android:id="@+id/AugustRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/august" />

        <RadioButton
            android:id="@+id/SeptemberRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/september" />

        <RadioButton
            android:id="@+id/OctoberRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/october" />

        <RadioButton
            android:id="@+id/NovemberRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/november" />

        <RadioButton
            android:id="@+id/DecemberRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/december" />

    </RadioGroup>

</GridLayout>