<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_frameworks"
        android:icon="@drawable/icons8_code_50"
        android:title="@string/frameworks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/icons8_calender_64"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icons8_male_user_50"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>